[package]
name = "juicy_native"
version = "0.1.0"
authors = []

[lib]
name = "juicy_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.14.0"
rustler_codegen = "0.14.0"
lazy_static = "0.2"

num-traits = "0.1"
num-bigint = "0.1"

iterative_json_parser = { git = "https://github.com/hansihe/rust_iterative_json_parser" }

[profile.release]
debug = true
debug-assertions = false
opt-level = 3
